src/test/ui/feature-gates/feature-gate-impl_header_lifetime_elision-with-in_band.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/feature-gate-impl_header_lifetime_elision-with-in_band.rs:18:22
   |
LL | impl MyTrait<'a> for &u32 { }
   |                      ^ expected lifetime parameter

error[E0106]: missing lifetime specifier
  --> $DIR/feature-gate-impl_header_lifetime_elision-with-in_band.rs:24:23
   |
LL | impl MarkerTrait for &'_ MyStruct { }
   |                       ^^ expected lifetime parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
